--- a/jinja/flask_example/templates/layout.html
+++ b/jinja/flask_example/templates/layout.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask Template Example</title>
+    {% block head %}
+      <title>{% block title %}{% endblock %} - Flask Super Example</title>
+    {% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style type="text/css">
       .container {
-        max-width: 500px;
+        max-width: 700px;
         padding-top: 100px;
       }
       h2 {color: red;}
@@ -14,11 +16,23 @@
   </head>
   <body>
     <div class="container">
+      {% block heading %}
+        <h1>{% block page %}{% endblock %} - Flask Super Example</h1>
+      {% endblock %}
       <h2>This is part of my base template</h2>
       <br>
       {% block content %}{% endblock %}
       <br>
       <h2>This is part of my base template</h2>
+      <br>
+      <div class="footer">
+        {% block footer %}
+          Watch! This will be added to my base and child templates using the super powerful super block!
+          <br>
+          <br>
+          <br>
+        {% endblock %}
+      </div>
     </div>
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
