--- a/jinja/flask_example/templates/template.html
+++ b/jinja/flask_example/templates/template.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}{{title}}{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
-{% block page %}Home{% endblock %}
+{% block page %}{{title}}{% endblock %}
 {% block heading %}
   {{ super() }}
 {% endblock %}
