--- a/jinja/flask_example/templates/template.html
+++ b/jinja/flask_example/templates/template.html
@@ -10,6 +10,8 @@
 {% block content %}
   <h3> This is the start of my child template</h3>
   <br>
+  <h4>Current date/time: {{ current_time | datetimefilter }}</h4>
+  <br>
   <p>My string: {{my_string}}</p>
   <p>Value from the list: {{my_list[3]}}</p>
   <p>Loop through the list:</p>
@@ -18,6 +20,8 @@
     <li>{{n}}</i>
     {% endfor %}
   </ul>
+  <br>
+  <p>Same list with a filter: {{ my_list|join(', ') }}</p>
   <h3> This is the end of my child template</h3>
   {% block footer %}
   {{super()}}
