--- a/behave-flask/templates/results.html
+++ b/behave-flask/templates/results.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
   <div id="results">
-    Here are your results!
-    <div id="{{tip}}">{{tip}}</div>
+    <div id="{{tip}}">You should tip {{tip}} percent!</div>
   </div>
+  <br>
+  <div><a href="/">Again?</a></div>
 {% endblock %}
