--- a/behave-flask/templates/layout.html
+++ b/behave-flask/templates/layout.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tip calculator</title>    
+    <title>Tip calculator</title>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <style type="text/css">
+      .container {
+        padding-top: 100px;
+        max-width: 500px;
+      }
+    </style>
   </head>
   <body>
-   
-    <header>
-        <h1>Tip calculator</h1>
-    </header> 
-     
     <div class="container">
+      <h1>Tip calculator</h1>
+      <br>
       {% block content %}
       {% endblock %}
     </div>
-     
+    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   </body>
 </html>
