--- a/flask-checklist/templates/home.html
+++ b/flask-checklist/templates/home.html
@@ -4,7 +4,7 @@
     <div id="error">{{form_error}}</div>
     <br>
     <div name="form_field" class="form-group">
-      <input type="text" name="item" class="form-control" placeholder="Enter item">
+      <input type="text" name="description" class="form-control" placeholder="Enter item">
     </div>
     <div name="form_field" class="form-group">
       <input type="text" name="amount" class="form-control" placeholder="Enter amount">
@@ -26,9 +26,16 @@
       <tbody>
         {% for item in my_items: %}
         <tr>
-          <td>{{item.item}}</td>
+          <td>{{item.description}}</td>
           <td>{{item.amount}}</td>
-          <td class="center"><button type="button" class="btn btn-primary btn-xs">X</button></td>
+          <td class="center"><a href='/complete/{{item.id}}'><button type="button" class="btn btn-primary btn-xs">X</button></a></td>
+        </tr>
+        {% endfor %}
+        {% for item in my_closed_items: %}
+        <tr class="closed">
+          <td>{{item.description}}</td>
+          <td>{{item.amount}}</td>
+          <td class="center">N/A</td>
         </tr>
         {% endfor %}
       </tbody>
