--- a/flask-checklist/v2/templates/home.html
+++ b/flask-checklist/v2/templates/home.html
@@ -9,17 +9,16 @@
     <div name="form_field" class="form-group">
       <input type="text" name="amount" class="form-control" placeholder="Enter amount">
     </div>
-    <div class="center">
-      <input type="submit" id="submit" class="btn btn-primary btn-lg" value="Add Item">
-    </div>
+    <input type="submit" id="submit" class="btn btn-primary" value="Add Item" />
   </form>
   <br>
   <div>
+    <h2>Don't forget!</h2>
     <p>
     <table class="table table-hover">
       <thead>
         <tr>
-          <th>Item Description</th>
+          <th>Item</th>
           <th>Amount</th>
           <th class="center">Complete?</th>
         </tr>
