--- a/flask-checklist/templates/home.html
+++ b/flask-checklist/templates/home.html
@@ -14,9 +14,22 @@
     </div>
   </form>
   <br>
+  <div class="center">
+    <div id="period-group" class="btn-group" data-toggle="buttons">
+      <label class="btn btn-success open_label">
+        <input type="radio" name="period" id="period1"> Open Items 
+      </label>
+      <label class="btn btn-success closed_label">
+        <input type="radio" name="period" id="period2"> Closed Items
+      </label>
+      <label class="btn btn-warning hide_label">
+        <input type="radio" name="period" id="period3"> Hide All
+      </label>
+    </div>
+  </div>
+  <br>
   <div>
-    <p>
-    <table class="table table-hover">
+    <table class="table table-hover" id="open_table">
       <thead>
         <tr class="open">
           <th>Item Description</th>
@@ -32,15 +45,25 @@
           <td class="center"><a href='/complete/{{item.item_id}}'><button type="button" class="btn btn-primary btn-xs completed_box">X</button></a></td>
         </tr>
         {% endfor %}
+      </tbody>
+    </table>      
+  </div>
+  <div>
+    <table class="table table-hover" id="closed_table">
+      <thead>
+        <tr class="open">
+          <th>Item Description</th>
+          <th>Amount</th>
+        </tr>
+      </thead>
+      <tbody>
         {% for item in closed_items: %}
         <tr class="closed">
           <td>{{item.description}}</td>
           <td>{{item.amount}}</td>
-          <td class="center">N/A</td>
         </tr>
         {% endfor %}
       </tbody>
     </table>      
-    </p>
   </div>
 {% endblock %}
