--- a/flask-checklist/templates/home.html
+++ b/flask-checklist/templates/home.html
@@ -7,7 +7,7 @@
       <input type="text" name="description" class="form-control" placeholder="Enter item">
     </div>
     <div name="form_field" class="form-group">
-      <input type="text" name="amount" class="form-control" placeholder="Enter amount">
+      <input type="number" name="amount" class="form-control" placeholder="Enter # of items">
     </div>
     <div class="center">
       <input type="submit" id="submit" class="btn btn-primary btn-lg" value="Add Item">
