--- a/flashcards-mvp/templates/layout.html
+++ b/flashcards-mvp/templates/layout.html
@@ -4,6 +4,9 @@
     <title>Flashcards-MVP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/cosmo/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='main.js') }}"></script> 
     <style>
       body {
         background-color: #eaeaea;
@@ -27,7 +30,7 @@
   <body>
     <div class="container">
       {% for message in get_flashed_messages() %}
-        <div class="alert alert-warning alert-dismissable">
+        <div class="alert alert-warning alert-dismissable flash-answer">
           <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
           {{message}}
         </div>
