--- a/flashcards-mvp/templates/check.html
+++ b/flashcards-mvp/templates/check.html
@@ -1,6 +1,4 @@
 {% extends "layout.html" %}
 {% block content %}
-  <div class="container">
-    <p><a href="/">Next Question</a></p>
-  </div>
+  <h3><a href="/">Next Question »</a></h3>
 {% endblock %}
