--- a/djangotango/tango_with_django_project/templates/rango/index.html
+++ b/djangotango/tango_with_django_project/templates/rango/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
-
-{% load static %} <!-- New line -->
-
 <html>
-
     <head>
         <title>Rango</title>
     </head>
 
     <body>
-        <h1>Rango says...</h1>
-        hello world! <strong>{{ boldmessage }}</strong><br />
-        <a href="/rango/about/">About</a><br />
-        <img src="{% static "rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
-    </body>
+        <h1>Rango says..hello world!</h1>
 
+        <br>
+        <h2>Top 5 Categories:</h2>
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                <!-- Following line changed to add an HTML hyperlink -->
+                <li><a href="/rango/category/{{ category.url }}">{{ category.name }}</a></li>
+                {% endfor %}
+            </ul>
+       {% else %}
+            <strong>There are no categories present.</strong>
+       {% endif %}
+
+        <br>
+        <h2>Top 5 Pages:</h2>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                <li>{{ page.title }}</li>
+                {% endfor %}
+            </ul>
+       {% else %}
+            <strong>There are no pages present.</strong>
+       {% endif %}
+
+    </body>
 </html>
