--- a/djangotango/tango_with_django_project/templates/rango/index.html
+++ b/djangotango/tango_with_django_project/templates/rango/index.html
@@ -31,6 +31,6 @@
        {% else %}
             <strong>There are no pages present.</strong>
        {% endif %}
-
+       <a href="/rango/add_category/">Add a New Category</a>
     </body>
 </html>
