--- a/djangotango/tango_with_django_project/templates/rango/index.html
+++ b/djangotango/tango_with_django_project/templates/rango/index.html
@@ -35,10 +35,15 @@
        {% else %}
             <strong>There are no pages present.</strong>
        {% endif %}
-       <a href="/rango/add_category/">Add a New Category</a>
-       <br>
-       <a href="/rango/register/">Register Here</a>
-       <br>
-       <a href="/rango/login/">Login</a>
+      {% if user.is_authenticated %}
+        <a href="/rango/restricted/">Restricted Page</a><br />
+        <a href="/rango/logout/">Logout</a><br />
+        <a href="/rango/add_category/">Add a New Category</a><br />
+      {% else %}
+        <a href="/rango/register/">Register Here</a><br />
+        <a href="/rango/login/">Login</a><br />
+      {% endif %}
+
+      <a href="/rango/about/">About</a><br/>
     </body>
 </html>
