--- a/djangotango/tango_with_django_project/templates/rango/add_page.html
+++ b/djangotango/tango_with_django_project/templates/rango/add_page.html
@@ -1,27 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends "rango/base.html" %}
 
-    <body>
-        <h1>Add a page</h1>
+{% block title %}Add a New Page to {{ category_name }}{% endblock %}
 
-        <form id="page_form" method="post" action="/rango/category/{{category_name_url}}/add_page/">
+{% block body_block %}
+<div class="hero-unit">
+    <h1>Add a Page</h1>
 
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
+    <br/>
+
+    <div class="container">
+
+        {% if not category_name_url %}
+            <div>The specified category does not exist!</div>
+        {% else %}
+            <form id="page_form" method="post" action="/rango/category/{{category_name_url}}/add_page/">
+
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
                 {{ hidden }}
-            {% endfor %}
+                {% endfor %}
 
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
+                {% for field in form.visible_fields %}
+                {{ field.errors }}<br/>
                 {{ field.help_text}}
                 {{ field }}
-            {% endfor %}
-
-            <input type="submit" name="submit" value="Create Page" />
-        </form>
-    </body>
-
-</html>
+                {% endfor %}
+                <br/>
+                <input class="btn btn-primary" type="submit" name="submit" value="Create Page"/>
+            </form>
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
