--- a/djangotango/tango_with_django_project/templates/rango/about.html
+++ b/djangotango/tango_with_django_project/templates/rango/about.html
@@ -11,5 +11,7 @@
 
     Here's a picture of Rango!<br/>
     <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
+    <br>
+    <p>You've visited the site {{visits}} times!<br>And you lasted visted on {{last_visited}}.</p>
 </div>
 {% endblock %}
