--- a/djangotango/tango_with_django_project/templates/rango/base.html
+++ b/djangotango/tango_with_django_project/templates/rango/base.html
@@ -1,30 +1,79 @@
+{% load static %}
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>Rango - {% block title %}How to Tango with Django!{% endblock %}</title>
-    </head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
+
+    <title>Rango - {% block title %}How to Tango with Django!{% endblock %}</title>
+</head>
 
     <body>
-        <div>
-            {% block body_block %}{% endblock %}
+        <div class="navbar navbar-inverse navbar-fixed-top">
+           <div class="navbar-inner">
+               <div class="container">
+                   <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                       <span class="icon-bar"></span>
+                       <span class="icon-bar"></span>
+                       <span class="icon-bar"></span>
+                   </button>
+                   <a class="brand" href="/rango/">Rango</a>
+
+                   <div class="nav-collapse collapse">
+                       <ul class="nav pull-right">
+                           {% if user.is_authenticated %}
+                            <li class="navbar-text">Welcome, {{ user.username }}!</li>
+                            <li><a href="/rango/logout/">Logout</a></li>
+                           {% else %}
+                            <li><a href="/rango/register/">Register</a></li>
+                            <li><a href="/rango/login/">Login</a></li>
+                           {% endif %}
+                       </ul>
+                       <ul class="nav">
+                           {% if user.is_authenticated %}
+                            <li><a href="/rango/restricted/">Restricted</a></li>
+                            <li><a href="/rango/add_category/">Add Category</a></li>
+                           {% endif %}
+                           <li><a href="/rango/about/">About</a></li>
+                       </ul>
+                   </div>
+                   <!--/.nav-collapse -->
+               </div>
+           </div>
         </div>
 
-        <hr />
-
-        <div>
-            <ul>
-            {% if user.is_authenticated %}
-                <li><a href="/rango/restricted/">Restricted Page</a></li>
-                <li><a href="/rango/logout/">Logout</a></li>
-                <li><a href="/rango/add_category/">Add a New Category</a></li>
-            {% else %}
-                <li><a href="/rango/register/">Register Here</a></li>
-                <li><a href="/rango/login/">Login</a></li>
-            {% endif %}
-
-                <li><a href="/rango/about/">About</a></li>
-            </ul>
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span3">
+                    <div class="well sidebar-nav">
+                        <!--- Empty for the timebeing -->
+                    </div>
+                    <!--/.well -->
+                </div>
+                <!--/span-->
+                <div class="span9">
+                    {% block body_block %}
+                    {% endblock %}
+                </div>
+                <!--/span-->
+            </div>
+            <!--/row-->
         </div>
+        <!--/.fluid-container-->
+
+        <hr>
+
+        <footer>
+            <div class="container">
+                <p>&copy; Rango: How to Tango with Django 2013</p>
+            </div>
+        </footer>
+
+    <script src="{% static 'js/jquery-2.1.0.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     </body>
 </html>
+
