--- a/djangotango/tango_with_django_project/templates/rango/register.html
+++ b/djangotango/tango_with_django_project/templates/rango/register.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         {% if registered %}
-        <p> Thank you for registering.</p>
+        <p> Thank you for registering.
 
         <p><a href="/rango/login/">Login</a> when you are ready to rango.</p>
         {% else %}
