--- a/djangotango/tango_with_django_project/templates/rango/category.html
+++ b/djangotango/tango_with_django_project/templates/rango/category.html
@@ -3,19 +3,21 @@
 {% block title %}{{ category_name }}{% endblock %}
 
 {% block body_block %}
-    <h1>{{ category_name }}</h1>
+    <div class="hero-unit">
+        <h1>{{ category_name }}</h1>
 
-    {% if pages %}
-    <ul>
-        {% for page in pages %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-        {% endfor %}
-    </ul>
-    {% else %}
-        <strong>No pages currently in category.</strong>
-    {% endif %}
+        {% if pages %}
+        <ul>
+            {% for page in pages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
 
-    {% if user.is_authenticated %}
-       <a href="/rango/category/{{category_name_url}}/add_page/">Add a Page</a>
-    {% endif %}
+        {% if user.is_authenticated %}
+           <a href="/rango/category/{{category_name_url}}/add_page/">Add a Page</a>
+        {% endif %}
+    </div>
 {% endblock %}
