--- a/djangotango/tango_with_django_project/templates/rango/index.html
+++ b/djangotango/tango_with_django_project/templates/rango/index.html
@@ -5,7 +5,6 @@
 {% block body_block %}
 <div class="hero-unit">
     <h1>Ready to Rango</h1>
-
     <p>Find, Add, Share and Rango useful links and resources.</p>
 </div>
 
@@ -29,7 +28,7 @@
         {% if pages %}
         <ul>
             {% for page in pages %}
-            <li><a href="{{ page.url}}">{{ page.title }}</a> - {{ page.category}} ({{ page.views }} view(s))</li>
+            <li><a href="{{ page.url}}">{{ page.title }}</a> - {{ page.category }} ({{ page.views }} view(s))</li>
             {% endfor %}
         </ul>
         {% else %}
@@ -38,7 +37,6 @@
 
     </div>
     <!--/span-->
-</div><!--/row-->
-
-
+</div>
+<!--/row-->
 {% endblock %}
