--- a/frontend/shopping_list/static/main.css
+++ b/frontend/shopping_list/static/main.css
@@ -8,7 +8,12 @@
   max-width: 75px;
 }
 
-.center-tag {
+.centered {
   text-align: center;
+}
+
+.alert-text {
+  color: #f04124;
+  font-style: italic;
 }
 
