--- a/angular/projects/madlibs/part4/css/main.css
+++ b/angular/projects/madlibs/part4/css/main.css
@@ -47,18 +47,19 @@ footer {
 .content {
   min-height: 450px;
 }
-.results {
+
+
+
+.results.ng-hide-add {
+  -webkit-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+  opacity:0;
+}
+.results.ng-hide-remove {
   -webkit-transition:0.5s linear all;
   transition:0.5s linear all;
   opacity:1;
 }
-
-.results.ng-hide {
-  -webkit-transition:0.5s linear all;
-  transition:0.0s linear all;
-  opacity:0;
-}
-
 .results.ng-hide-add, .results.ng-hide-remove {
   display:block!important;
 }
