--- a/python/flask-yummly/yummly/templates/index.html
+++ b/python/flask-yummly/yummly/templates/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Recipe Search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <style>
+      .container {
+        max-width: 400px;
+        padding-top: 60px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-      <h1>Hello, world!</h1>
+      <h1>Recipe Search!</h1>
+      <br>
+
+    <!-- search form -->
+    <form role="form" method="POST">
+      <div class="form-group">
+        <input type="text" class="form-control" name="ingredient" placeholder="Enter an ingredient..." required>
+      </div>
+      <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+    <br><br>
+    <!-- results -->
+    <center><img src={{ image_url }} alt="Recipe photo"></center>
+
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
