--- a/python/flask-yummly/yummly/templates/index.html
+++ b/python/flask-yummly/yummly/templates/index.html
@@ -26,9 +26,25 @@
     <br><br>
 
     <!-- results -->
-    {% if image_url %}
-      <center><img src={{ image_url }} alt="Recipe photo"></center>
+    {% if recipe_response %}
+      <h2><a href={{ recipe_response[2] }}>{{ recipe_response[0] }}</a><h2>
+      <p><img src={{ recipe_response[1] }} alt="Recipe photo"></p>
+    {% else %}
+      <p><strong>Sorry! No recipes match your search. Try again! </strong></p>
     {% endif %}
+
+    {% if ingredients %}
+      <h3>Ingredients</h3>
+        <ul>
+          {% for ingredient in ingredients %}
+          <li>{{ ingredient }}</li>
+          {% endfor %}
+        </ul>
+    {% else %}
+      <p><strong>Sorry! No ingredients. Perhaps you should try a different search. </strong></p>
+    {% endif %}
+
+    <hr>
 
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
